--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,8 @@ name: PWarp
 version: '1.0-SNAPSHOT'
 main: xyz.aeolia.pwarp.PWarp
 api-version: '1.21'
+depend:
+  - "AeoliaLib"
 
 commands:
   pwarp:
